fatto paragrafo e lista non ordinata

--- a/index.html
+++ b/index.html
@@ -29,5 +29,24 @@
                 1st Photo: John S.and James L.Knight Foundation, by Scott Hernichsen<br>2nd Photo: Wikimedia, by Paul Clarke
             </div>
         </header>
+
+        <!--Main section-->
+        <main>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam, a beatae dolore mollitia totam amet! Eveniet, explicabo aliquam!<span class="Highlighted"> Eveniet voluptatum voluptates officia amet fuga mollitia officiis ducimus alias?</span> Eius sed quas sunt id alias, rem, laboriosam omnis atque vitae repudiandae temporibus autem possimus non impedit error sit animi? Amet quis odio similique eius? Illo, cumque necessitatibus beatae blanditiis repellat et, reiciendis optio mollitia quod maxime harum tenetur nobis doloremque est quam aspernatur tempora earum hic labore explicabo quasi pariatur! Perspiciatis error harum accusamus obcaecati voluptas, eaque perferendis eos veniam rerum doloribus expedita tempore assumenda voluptates facilis nam minus minima saepe!
+            </p>
+
+            <ul>
+                <li>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis voluptas enim excepturi unde aut totam, mollitia soluta fugiat doloribus odit voluptatum perspiciatis commodi accusantium.
+                </li>
+                <li>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem beatae, provident error tempora ullam praesentium. Dolore doloribus, commodi totam iure obcaecati ad modi consequuntur doloremqu.
+                </li>
+                <li>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt nam quisquam architecto asperiores, sed iure blanditiis eveniet. Maiores fuga nesciunt sunt molestias consequatur excepturi velit voluptas.
+                </li>
+            </ul>
+        </main>
     </body>
 </html>
