finito main e iniziato footer

--- a/index.html
+++ b/index.html
@@ -47,6 +47,47 @@
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt nam quisquam architecto asperiores, sed iure blanditiis eveniet. Maiores fuga nesciunt sunt molestias consequatur excepturi velit voluptas.
                 </li>
             </ul>
+
+            <!--table-->
+
+            <table>
+                <thead>
+                    <tr>
+                        <td class="first-column">Lorem Ipsum Dolor</td>
+                        <td class="second-column">Lorem Ipsum Dolor</td>
+                        <td class="third-column">Lorem Ipsum Dolor</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem Ipsum Dolor</td>
+                    </tr>
+                    <tr class="white-row">
+                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem Ipsum Dolor</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem Ipsum Dolor</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse laboriosam iure numquam consequuntur obcaecati impedit aliquid expedita natus minima id facere, labore neque recusandae exercitationem ipsam quibusdam suscipit cumque blanditiis dignissimos. Temporibus esse totam mollitia ex ut officiis numquam, <span class="Highlighted">rem velit vel illum illo excepturi reprehenderit quia repellat! Vel aspernatur repellendus maiores fugiat deserunt aliquam assumenda beatae</span>, molestiae facere omnis veniam consequuntur nihil blanditiis doloremque sunt culpa accusamus perspiciatis dolorem iure? Praesentium voluptate vel, enim accusamus esse inventore placeat veniam repudiandae labore quo minus quas, reprehenderit officia. Nemo non error tempore cupiditate explicabo, placeat quos fugit ratione quas? Vel harum nam iste, quae rem iusto itaque earum eos ea aliquam ad explicabo nihil possimus, sed deleniti doloremque facere tempore accusamus quasi? Voluptate natus ad assumenda rerum, dolores nam quidem labore vitae nihil, nisi fugit id excepturi repellendus illo beatae soluta consequatur adipisci sit vero exercitationem. Vel neque impedit possimus iure? Sunt, ab minus ex deserunt id similique. Omnis deserunt dicta earum hic qui veniam aspernatur autem, repudiandae neque fuga mollitia dignissimos harum provident expedita sapiente, aliquid soluta rerum error alias sit ipsam, vitae optio corrupti doloremque? Earum ipsam distinctio, commodi eveniet aut ullam error asperiores pariatur, omnis et culpa.
+            </p>
         </main>
+
+        <!--footer-->
+        <footer>
+            <span>Potrebbero interessarti</span>
+            <div class="pc-photo">
+                Lorem ipsum dolor
+            </div>
+        </footer>
     </body>
 </html>
