corretta riga table

--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
                     <tr>
                         <td>Lorem Ipsum Dolor</td>
                         <td>Lorem Ipsum Dolor</td>
-                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, minima. Id beatae iure architecto veniam impedit repellat, at doloribus quae corporis laudantium ad corrupti doloremque commodi iusto rerum nostrum repudiandae.</td>
                     </tr>
                     <tr class="white-row">
                         <td>Lorem Ipsum Dolor</td>
                         <td>Lorem Ipsum Dolor</td>
-                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores commodi voluptates corrupti. Harum totam, soluta nisi aspernatur exercitationem eos officiis dolorum, numquam culpa cupiditate cum quod obcaecati doloremque aliquid tempore?</td>
                     </tr>
                     <tr>
                         <td>Lorem Ipsum Dolor</td>
                         <td>Lorem Ipsum Dolor</td>
-                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas eveniet esse quis fugit voluptates perferendis ad officiis nam non officia molestiae, repellat nisi modi dolore tenetur nulla vitae, doloremque aperiam.</td>
                     </tr>
                 </tbody>
             </table>
@@ -86,7 +86,11 @@
         <footer>
             <span>Potrebbero interessarti</span>
             <div class="pc-photo">
-                Lorem ipsum dolor
+                <span class="photo-link-1">Lorem ipsum dolor</span>
+            </div>
+
+            <div class="graph-photo">
+                <span class="photo-link-2">Lorem ipsum dolor</span>
             </div>
         </footer>
     </body>
